--- a/order-service/src/main/resources/application.properties
+++ b/order-service/src/main/resources/application.properties
@@ -1,4 +1,5 @@
 spring.application.name=order-service
+server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/orderdb
 spring.datasource.username=root
 spring.datasource.password=Alade@95
@@ -7,5 +8,6 @@ spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
 
 eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
